vendor/thiserror-1.0.24/tests/ui/unexpected-struct-source.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[source]
pub struct Error;

fn main() {}
